fix button cropping on login/signup

--- a/app/styles/_accounts.scss
+++ b/app/styles/_accounts.scss
@@ -194,7 +194,6 @@
     font-size: 14px;
   }
   &-btn {
-    margin-bottom: 15px;
     > .fa {
       margin-right: 6px;
       font-size: 24px;
